add new translations

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -316,6 +316,7 @@
     "DiscoundCode": "كوبون الخصم",
     "total": "الاجمالي",
     "submitTotalModal": "إتمام الطلب",
-    "tax": "الضريبة"
+    "tax": "الضريبة",
+    "price": "السعر"
   }
 }
