add new translation

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -135,7 +135,10 @@
     "return-products": "ارجــاع المـــنتجات",
     "score-balance": "رصيــــــد النـقــاط",
     "products-list": "قائمة المنـتــجـات",
-    "purchases-list": "طلبـــات الشـــراء"
+    "purchases-list": "طلبـــات الشـــراء",
+    "contact-us": "تواصل معنا",
+    "full-name": "الاسم كامل",
+    "your-message": "رسالتك هنا"
   },
 
   "wishlist": {
