--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -243,6 +243,9 @@
     "password": "Password",
     "submitBtn": "Save Changes"
   },
+  "filter": {
+    "submitBtn": "Search"
+  },
   "checkout": {
     "payment-address": "Payment address",
     "shipping-address": "Shipping/delivery address",
