--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">gojaddy</string>
+    <string name="facebook_app_id">535934555056398</string>
+    <string name="facebook_client_token">6b30e614b2eafbb2b84fd7651c828526</string>
+    <string name="fb_login_protocol_scheme">fb535934555056398</string>
 </resources>
