--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -120,7 +120,8 @@
     "rate-field": "Documents (optional)",
     "attach-image": "Attach image (optional)",
     "select": "Select {{optionName}}",
-    "custom-text": "Custom text.."
+    "custom-text": "Custom text..",
+    "load-more": "load more reviews"
   },
   "category": {
     "title": "Category"
