fix some issues+1

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -107,6 +107,7 @@
     "rating": "التقيمات",
     "follow": "متابعة",
     "followed": "متابع",
+    "display-methods": "طريقة العرض",
     "tabs": {
       "mainTab": "الرئيسية",
       "newTab": "ما الجديد",
