--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -242,6 +242,7 @@
     "countries-def": "Select Country",
     "states-select-country": "Select Country First",
     "states-def": "Select State",
+    "no-state": "No States",
     "setDefualt": "Set Defualt?",
     "submitBtn": "Continue"
   },
