feat: add call for price

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -95,6 +95,7 @@
     "custom-text": "تخصيص..",
     "load-more": "تحميل المزيد من التقييمات",
     "no-rates-added-title": "لم يتم اضافة تقييمات",
+    "CallForPrice": "اتصل لمعرفة السعر",
     "no-rates-added-description": "اشتري المنتج واضف تقييمك"
   },
   "category": {
