--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -124,6 +124,7 @@
     "custom-text": "Custom text..",
     "load-more": "load more reviews",
     "no-rates-added-title": "No Rates added before",
+    "CallForPrice": "Call For Price",
     "no-rates-added-description": "pick this product and rate it"
   },
   "category": {
