--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -96,7 +96,7 @@
     "load-more": "تحميل المزيد من التقييمات",
     "no-rates-added-title": "لم يتم اضافة تقييمات",
     "CallForPrice": "اتصل لمعرفة السعر",
-    "no-rates-added-description": "اشتري المنتج واضف تقييمك"
+    "no-rates-added-description": "لا يوجد نتائج"
   },
   "category": {
     "title": "التصنيفات"
