--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -125,7 +125,7 @@
     "load-more": "load more reviews",
     "no-rates-added-title": "No Rates added before",
     "CallForPrice": "Call For Price",
-    "no-rates-added-description": "pick this product and rate it"
+    "no-rates-added-description": "no result"
   },
   "category": {
     "title": "Category"
